--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
   "files.associations": {
     "*.embeddedhtml": "html",
     "stdint.h": "c",
-    "ordenacao.h": "c"
+    "ordenacao.h": "c",
+    "stdlib.h": "c",
+    "string.h": "c"
   }
 }
